syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#statusevent

package github;

import "user.proto";
import "commit_user.proto";
import "repository.proto";

message CommitDetailTree {
	string sha = 1;
	string url = 2;
}

message CommitBranch {
	string name = 1;
	CommitDetailTree commit = 2;
}

message CommitDetail {
	CommitUser author = 1;
	CommitUser committer = 2;
	string message = 3;
	CommitDetailTree tree = 4;
	string url = 5;
	int32 comment_count = 6;
}

message CommitUpdate {
	string sha = 1;
	CommitDetail commit = 2;
	string url = 3;
	string html_url = 4;
	string comments_url = 5;
	User author = 6;
	User committer = 7;
	repeated CommitDetailTree parents = 8;
}

message StatusEvent {
	int32 id = 1;
	string sha = 2;
	string name = 3;
	string target_url = 4;
	string context = 5;
	string description = 6;
	string state = 7;
	CommitUpdate commit = 8;
	repeated CommitBranch branches = 9;
	string created_at = 10;
	string updated_at = 11;
	Repository repository = 12;
	User sender = 13;
}
