package github

import (
	"testing"
	"encoding/json"
)

func TestPushEvent(t *testing.T) {
	event := `{
	  "ref": "refs/heads/changes",
	  "before": "9049f1265b7d61be4a8904a9a27120d2064dab3b",
	  "after": "0d1a26e67d8f5eaf1f6ba5c57fc3c7d91ac0fd1c",
	  "created": false,
	  "deleted": false,
	  "forced": false,
	  "base_ref": null,
	  "compare": "https://github.com/baxterthehacker/public-repo/compare/9049f1265b7d...0d1a26e67d8f",
	  "commits": [
	    {
	      "id": "0d1a26e67d8f5eaf1f6ba5c57fc3c7d91ac0fd1c",
	      "tree_id": "f9d2a07e9488b91af2641b26b9407fe22a451433",
	      "distinct": true,
	      "message": "Update README.md",
	      "timestamp": "2015-05-05T19:40:15-04:00",
	      "url": "https://github.com/baxterthehacker/public-repo/commit/0d1a26e67d8f5eaf1f6ba5c57fc3c7d91ac0fd1c",
	      "author": {
	        "name": "baxterthehacker",
	        "email": "baxterthehacker@users.noreply.github.com",
	        "username": "baxterthehacker"
	      },
	      "committer": {
	        "name": "baxterthehacker",
	        "email": "baxterthehacker@users.noreply.github.com",
	        "username": "baxterthehacker"
	      },
	      "added": [

	      ],
	      "removed": [

	      ],
	      "modified": [
	        "README.md"
	      ]
	    }
	  ],
	  "head_commit": {
	    "id": "0d1a26e67d8f5eaf1f6ba5c57fc3c7d91ac0fd1c",
	    "tree_id": "f9d2a07e9488b91af2641b26b9407fe22a451433",
	    "distinct": true,
	    "message": "Update README.md",
	    "timestamp": "2015-05-05T19:40:15-04:00",
	    "url": "https://github.com/baxterthehacker/public-repo/commit/0d1a26e67d8f5eaf1f6ba5c57fc3c7d91ac0fd1c",
	    "author": {
	      "name": "baxterthehacker",
	      "email": "baxterthehacker@users.noreply.github.com",
	      "username": "baxterthehacker"
	    },
	    "committer": {
	      "name": "baxterthehacker",
	      "email": "baxterthehacker@users.noreply.github.com",
	      "username": "baxterthehacker"
	    },
	    "added": [

	    ],
	    "removed": [

	    ],
	    "modified": [
	      "README.md"
	    ]
	  },
	  "repository": {
	    "id": 35129377,
	    "name": "public-repo",
	    "full_name": "baxterthehacker/public-repo",
	    "owner": {
	      "name": "baxterthehacker",
	      "email": "baxterthehacker@users.noreply.github.com"
	    },
	    "private": false,
	    "html_url": "https://github.com/baxterthehacker/public-repo",
	    "description": "",
	    "fork": false,
	    "url": "https://github.com/baxterthehacker/public-repo",
	    "forks_url": "https://api.github.com/repos/baxterthehacker/public-repo/forks",
	    "keys_url": "https://api.github.com/repos/baxterthehacker/public-repo/keys{/key_id}",
	    "collaborators_url": "https://api.github.com/repos/baxterthehacker/public-repo/collaborators{/collaborator}",
	    "teams_url": "https://api.github.com/repos/baxterthehacker/public-repo/teams",
	    "hooks_url": "https://api.github.com/repos/baxterthehacker/public-repo/hooks",
	    "issue_events_url": "https://api.github.com/repos/baxterthehacker/public-repo/issues/events{/number}",
	    "events_url": "https://api.github.com/repos/baxterthehacker/public-repo/events",
	    "assignees_url": "https://api.github.com/repos/baxterthehacker/public-repo/assignees{/user}",
	    "branches_url": "https://api.github.com/repos/baxterthehacker/public-repo/branches{/branch}",
	    "tags_url": "https://api.github.com/repos/baxterthehacker/public-repo/tags",
	    "blobs_url": "https://api.github.com/repos/baxterthehacker/public-repo/git/blobs{/sha}",
	    "git_tags_url": "https://api.github.com/repos/baxterthehacker/public-repo/git/tags{/sha}",
	    "git_refs_url": "https://api.github.com/repos/baxterthehacker/public-repo/git/refs{/sha}",
	    "trees_url": "https://api.github.com/repos/baxterthehacker/public-repo/git/trees{/sha}",
	    "statuses_url": "https://api.github.com/repos/baxterthehacker/public-repo/statuses/{sha}",
	    "languages_url": "https://api.github.com/repos/baxterthehacker/public-repo/languages",
	    "stargazers_url": "https://api.github.com/repos/baxterthehacker/public-repo/stargazers",
	    "contributors_url": "https://api.github.com/repos/baxterthehacker/public-repo/contributors",
	    "subscribers_url": "https://api.github.com/repos/baxterthehacker/public-repo/subscribers",
	    "subscription_url": "https://api.github.com/repos/baxterthehacker/public-repo/subscription",
	    "commits_url": "https://api.github.com/repos/baxterthehacker/public-repo/commits{/sha}",
	    "git_commits_url": "https://api.github.com/repos/baxterthehacker/public-repo/git/commits{/sha}",
	    "comments_url": "https://api.github.com/repos/baxterthehacker/public-repo/comments{/number}",
	    "issue_comment_url": "https://api.github.com/repos/baxterthehacker/public-repo/issues/comments{/number}",
	    "contents_url": "https://api.github.com/repos/baxterthehacker/public-repo/contents/{+path}",
	    "compare_url": "https://api.github.com/repos/baxterthehacker/public-repo/compare/{base}...{head}",
	    "merges_url": "https://api.github.com/repos/baxterthehacker/public-repo/merges",
	    "archive_url": "https://api.github.com/repos/baxterthehacker/public-repo/{archive_format}{/ref}",
	    "downloads_url": "https://api.github.com/repos/baxterthehacker/public-repo/downloads",
	    "issues_url": "https://api.github.com/repos/baxterthehacker/public-repo/issues{/number}",
	    "pulls_url": "https://api.github.com/repos/baxterthehacker/public-repo/pulls{/number}",
	    "milestones_url": "https://api.github.com/repos/baxterthehacker/public-repo/milestones{/number}",
	    "notifications_url": "https://api.github.com/repos/baxterthehacker/public-repo/notifications{?since,all,participating}",
	    "labels_url": "https://api.github.com/repos/baxterthehacker/public-repo/labels{/name}",
	    "releases_url": "https://api.github.com/repos/baxterthehacker/public-repo/releases{/id}",
	    "created_at": "2015-05-05T23:40:12Z",
	    "updated_at": "2015-05-05T23:40:12Z",
	    "pushed_at": "2015-05-05T23:40:12Z",
	    "git_url": "git://github.com/baxterthehacker/public-repo.git",
	    "ssh_url": "git@github.com:baxterthehacker/public-repo.git",
	    "clone_url": "https://github.com/baxterthehacker/public-repo.git",
	    "svn_url": "https://github.com/baxterthehacker/public-repo",
	    "homepage": null,
	    "size": 0,
	    "stargazers_count": 0,
	    "watchers_count": 0,
	    "language": null,
	    "has_issues": true,
	    "has_downloads": true,
	    "has_wiki": true,
	    "has_pages": true,
	    "forks_count": 0,
	    "mirror_url": null,
	    "open_issues_count": 0,
	    "forks": 0,
	    "open_issues": 0,
	    "watchers": 0,
	    "default_branch": "master",
	    "stargazers": 0,
	    "master_branch": "master"
	  },
	  "pusher": {
	    "name": "baxterthehacker",
	    "email": "baxterthehacker@users.noreply.github.com"
	  },
	  "sender": {
	    "login": "baxterthehacker",
	    "id": 6752317,
	    "avatar_url": "https://avatars.githubusercontent.com/u/6752317?v=3",
	    "gravatar_id": "",
	    "url": "https://api.github.com/users/baxterthehacker",
	    "html_url": "https://github.com/baxterthehacker",
	    "followers_url": "https://api.github.com/users/baxterthehacker/followers",
	    "following_url": "https://api.github.com/users/baxterthehacker/following{/other_user}",
	    "gists_url": "https://api.github.com/users/baxterthehacker/gists{/gist_id}",
	    "starred_url": "https://api.github.com/users/baxterthehacker/starred{/owner}{/repo}",
	    "subscriptions_url": "https://api.github.com/users/baxterthehacker/subscriptions",
	    "organizations_url": "https://api.github.com/users/baxterthehacker/orgs",
	    "repos_url": "https://api.github.com/users/baxterthehacker/repos",
	    "events_url": "https://api.github.com/users/baxterthehacker/events{/privacy}",
	    "received_events_url": "https://api.github.com/users/baxterthehacker/received_events",
	    "type": "User",
	    "site_admin": false
	  }
	}`
	var pushEvent PushEvent
	err := json.Unmarshal([]byte(event), &pushEvent)
	if err != nil {
		t.Error(err)
	} else {
		if pushEvent.Ref != "refs/heads/changes" {
			t.Error("pushEvent.Ref != refs/heads/changes")
		}
		if pushEvent.Pusher.Name != "baxterthehacker" {
			t.Error("pushEvent.Pusher.Name != baxterthehacker")
		}
		if pushEvent.HeadCommit.Distinct == false {
			t.Error("pushEvent.HeadCommit.Distinct should have been true")
		}
		repo := pushEvent.Repository
		if repo.Id != 35129377 {
			t.Error("pushEvent.Repository.Id != 35129377")
		}
		sender := pushEvent.Sender
		if sender.Login != "baxterthehacker" {
			t.Error("pushEvent.Sender.Login != baxterthehacker")
		}
	}
}

func TestPushEventWithOrganization(t *testing.T) {
	event := `{
	  "ref": "refs/heads/master",
	  "before": "63ef68d1912a4787e36bceb98ee3a8ae036e9ebb",
	  "after": "a85c56fabe5180fd5d0fad0a45cc69cb687d60b1",
	  "created": false,
	  "deleted": false,
	  "forced": false,
	  "base_ref": null,
	  "compare": "https://github.com/pinpt/worker/compare/63ef68d1912a...a85c56fabe51",
	  "commits": [
	    {
	      "id": "a85c56fabe5180fd5d0fad0a45cc69cb687d60b1",
	      "tree_id": "8844a8ea7884252a51ceab3d17fbc8008c50ce9c",
	      "distinct": true,
	      "message": "refactor to use a more standard go project layout by placing binary into cmd folder and all packages are in pkg to make it easier to share with other projects outside this repo and allow multiple binaries for one repo.  renamed packages to match new pinpt org move",
	      "timestamp": "2016-12-12T16:05:00-08:00",
	      "url": "https://github.com/pinpt/worker/commit/a85c56fabe5180fd5d0fad0a45cc69cb687d60b1",
	      "author": {
	        "name": "Jeff Haynie",
	        "email": "jhaynie@gmail.com",
	        "username": "jhaynie"
	      },
	      "committer": {
	        "name": "Jeff Haynie",
	        "email": "jhaynie@gmail.com",
	        "username": "jhaynie"
	      },
	      "added": [
	        "cmd/worker/main.go",
	        "pkg/cache/cache.go",
	        "pkg/cache/disk.go",
	        "pkg/cache/hdfs.go",
	        "pkg/db/db.go",
	        "pkg/event/activity_summary.go",
	        "pkg/event/activity_summary_commit.go",
	        "pkg/event/activity_summary_file.go",
	        "pkg/event/activity_summary_language.go",
	        "pkg/event/badge.go",
	        "pkg/event/badge_metric.go",
	        "pkg/event/commit_comment.go",
	        "pkg/event/fork.go",
	        "pkg/event/geo.go",
	        "pkg/event/gollum.go",
	        "pkg/event/integration_installation.go",
	        "pkg/event/integration_installation_repositories.go",
	        "pkg/event/issue.go",
	        "pkg/event/issue_comment.go",
	        "pkg/event/issue_history.go",
	        "pkg/event/label.go",
	        "pkg/event/milestone.go",
	        "pkg/event/ping.go",
	        "pkg/event/pullrequest.go",
	        "pkg/event/pullrequest_history.go",
	        "pkg/event/pullrequest_review.go",
	        "pkg/event/pullrequest_review_comment.go",
	        "pkg/event/push.go",
	        "pkg/event/release.go",
	        "pkg/event/repo.go",
	        "pkg/event/repo_import.go",
	        "pkg/event/repo_status.go",
	        "pkg/event/user.go",
	        "pkg/event/user_badge.go",
	        "pkg/event/user_repo.go",
	        "pkg/event/utils.go",
	        "pkg/event/watch.go",
	        "pkg/fetcher/fetcher.go",
	        "pkg/geo/geo.go",
	        "pkg/github/github.go",
	        "pkg/github/github_test.go",
	        "pkg/json/json.go",
	        "pkg/log/log.go",
	        "pkg/mq/kafka.go",
	        "pkg/mq/mq.go",
	        "pkg/mq/nats.go",
	        "pkg/mq/rabbit.go",
	        "pkg/types/activity_badge.pb.go",
	        "pkg/types/activity_badge.proto",
	        "pkg/types/activity_summary.pb.go",
	        "pkg/types/activity_summary.proto",
	        "pkg/types/activity_summary_commit.pb.go",
	        "pkg/types/activity_summary_commit.proto",
	        "pkg/types/activity_summary_file.pb.go",
	        "pkg/types/activity_summary_file.proto",
	        "pkg/types/activity_summary_language.pb.go",
	        "pkg/types/activity_summary_language.proto",
	        "pkg/types/message.pb.go",
	        "pkg/types/message.proto",
	        "pkg/types/readme.pb.go",
	        "pkg/types/readme.proto",
	        "pkg/types/repo_import.pb.go",
	        "pkg/types/repo_import.proto",
	        "pkg/types/repo_status.pb.go",
	        "pkg/types/repo_status.proto",
	        "pkg/types/types.go",
	        "pkg/types/user.pb.go",
	        "pkg/types/user.proto",
	        "pkg/types/user_repo.pb.go",
	        "pkg/types/user_repo.proto",
	        "pkg/util/util.go"
	      ],
	      "removed": [
	        "cache/cache.go",
	        "cache/disk.go",
	        "cache/hdfs.go",
	        "db/db.go",
	        "event/activity_summary.go",
	        "event/activity_summary_commit.go",
	        "event/activity_summary_file.go",
	        "event/activity_summary_language.go",
	        "event/badge.go",
	        "event/badge_metric.go",
	        "event/commit_comment.go",
	        "event/fork.go",
	        "event/geo.go",
	        "event/gollum.go",
	        "event/integration_installation.go",
	        "event/integration_installation_repositories.go",
	        "event/issue.go",
	        "event/issue_comment.go",
	        "event/issue_history.go",
	        "event/label.go",
	        "event/milestone.go",
	        "event/ping.go",
	        "event/pullrequest.go",
	        "event/pullrequest_history.go",
	        "event/pullrequest_review.go",
	        "event/pullrequest_review_comment.go",
	        "event/push.go",
	        "event/release.go",
	        "event/repo.go",
	        "event/repo_import.go",
	        "event/repo_status.go",
	        "event/user.go",
	        "event/user_badge.go",
	        "event/user_repo.go",
	        "event/utils.go",
	        "event/watch.go",
	        "fetcher/fetcher.go",
	        "geo/geo.go",
	        "github/github.go",
	        "github/github_test.go",
	        "json/json.go",
	        "log/log.go",
	        "main.go",
	        "mq/kafka.go",
	        "mq/mq.go",
	        "mq/nats.go",
	        "mq/rabbit.go",
	        "types/activity_badge.pb.go",
	        "types/activity_badge.proto",
	        "types/activity_summary.pb.go",
	        "types/activity_summary.proto",
	        "types/activity_summary_commit.pb.go",
	        "types/activity_summary_commit.proto",
	        "types/activity_summary_file.pb.go",
	        "types/activity_summary_file.proto",
	        "types/activity_summary_language.pb.go",
	        "types/activity_summary_language.proto",
	        "types/message.pb.go",
	        "types/message.proto",
	        "types/readme.pb.go",
	        "types/readme.proto",
	        "types/repo_import.pb.go",
	        "types/repo_import.proto",
	        "types/repo_status.pb.go",
	        "types/repo_status.proto",
	        "types/types.go",
	        "types/user.pb.go",
	        "types/user.proto",
	        "types/user_repo.pb.go",
	        "types/user_repo.proto",
	        "util/util.go"
	      ],
	      "modified": [
	        "Makefile",
	        "glide.yaml"
	      ]
	    }
	  ],
	  "head_commit": {
	    "id": "a85c56fabe5180fd5d0fad0a45cc69cb687d60b1",
	    "tree_id": "8844a8ea7884252a51ceab3d17fbc8008c50ce9c",
	    "distinct": true,
	    "message": "refactor to use a more standard go project layout by placing binary into cmd folder and all packages are in pkg to make it easier to share with other projects outside this repo and allow multiple binaries for one repo.  renamed packages to match new pinpt org move",
	    "timestamp": "2016-12-12T16:05:00-08:00",
	    "url": "https://github.com/pinpt/worker/commit/a85c56fabe5180fd5d0fad0a45cc69cb687d60b1",
	    "author": {
	      "name": "Jeff Haynie",
	      "email": "jhaynie@gmail.com",
	      "username": "jhaynie"
	    },
	    "committer": {
	      "name": "Jeff Haynie",
	      "email": "jhaynie@gmail.com",
	      "username": "jhaynie"
	    },
	    "added": [
	      "cmd/worker/main.go",
	      "pkg/cache/cache.go",
	      "pkg/cache/disk.go",
	      "pkg/cache/hdfs.go",
	      "pkg/db/db.go",
	      "pkg/event/activity_summary.go",
	      "pkg/event/activity_summary_commit.go",
	      "pkg/event/activity_summary_file.go",
	      "pkg/event/activity_summary_language.go",
	      "pkg/event/badge.go",
	      "pkg/event/badge_metric.go",
	      "pkg/event/commit_comment.go",
	      "pkg/event/fork.go",
	      "pkg/event/geo.go",
	      "pkg/event/gollum.go",
	      "pkg/event/integration_installation.go",
	      "pkg/event/integration_installation_repositories.go",
	      "pkg/event/issue.go",
	      "pkg/event/issue_comment.go",
	      "pkg/event/issue_history.go",
	      "pkg/event/label.go",
	      "pkg/event/milestone.go",
	      "pkg/event/ping.go",
	      "pkg/event/pullrequest.go",
	      "pkg/event/pullrequest_history.go",
	      "pkg/event/pullrequest_review.go",
	      "pkg/event/pullrequest_review_comment.go",
	      "pkg/event/push.go",
	      "pkg/event/release.go",
	      "pkg/event/repo.go",
	      "pkg/event/repo_import.go",
	      "pkg/event/repo_status.go",
	      "pkg/event/user.go",
	      "pkg/event/user_badge.go",
	      "pkg/event/user_repo.go",
	      "pkg/event/utils.go",
	      "pkg/event/watch.go",
	      "pkg/fetcher/fetcher.go",
	      "pkg/geo/geo.go",
	      "pkg/github/github.go",
	      "pkg/github/github_test.go",
	      "pkg/json/json.go",
	      "pkg/log/log.go",
	      "pkg/mq/kafka.go",
	      "pkg/mq/mq.go",
	      "pkg/mq/nats.go",
	      "pkg/mq/rabbit.go",
	      "pkg/types/activity_badge.pb.go",
	      "pkg/types/activity_badge.proto",
	      "pkg/types/activity_summary.pb.go",
	      "pkg/types/activity_summary.proto",
	      "pkg/types/activity_summary_commit.pb.go",
	      "pkg/types/activity_summary_commit.proto",
	      "pkg/types/activity_summary_file.pb.go",
	      "pkg/types/activity_summary_file.proto",
	      "pkg/types/activity_summary_language.pb.go",
	      "pkg/types/activity_summary_language.proto",
	      "pkg/types/message.pb.go",
	      "pkg/types/message.proto",
	      "pkg/types/readme.pb.go",
	      "pkg/types/readme.proto",
	      "pkg/types/repo_import.pb.go",
	      "pkg/types/repo_import.proto",
	      "pkg/types/repo_status.pb.go",
	      "pkg/types/repo_status.proto",
	      "pkg/types/types.go",
	      "pkg/types/user.pb.go",
	      "pkg/types/user.proto",
	      "pkg/types/user_repo.pb.go",
	      "pkg/types/user_repo.proto",
	      "pkg/util/util.go"
	    ],
	    "removed": [
	      "cache/cache.go",
	      "cache/disk.go",
	      "cache/hdfs.go",
	      "db/db.go",
	      "event/activity_summary.go",
	      "event/activity_summary_commit.go",
	      "event/activity_summary_file.go",
	      "event/activity_summary_language.go",
	      "event/badge.go",
	      "event/badge_metric.go",
	      "event/commit_comment.go",
	      "event/fork.go",
	      "event/geo.go",
	      "event/gollum.go",
	      "event/integration_installation.go",
	      "event/integration_installation_repositories.go",
	      "event/issue.go",
	      "event/issue_comment.go",
	      "event/issue_history.go",
	      "event/label.go",
	      "event/milestone.go",
	      "event/ping.go",
	      "event/pullrequest.go",
	      "event/pullrequest_history.go",
	      "event/pullrequest_review.go",
	      "event/pullrequest_review_comment.go",
	      "event/push.go",
	      "event/release.go",
	      "event/repo.go",
	      "event/repo_import.go",
	      "event/repo_status.go",
	      "event/user.go",
	      "event/user_badge.go",
	      "event/user_repo.go",
	      "event/utils.go",
	      "event/watch.go",
	      "fetcher/fetcher.go",
	      "geo/geo.go",
	      "github/github.go",
	      "github/github_test.go",
	      "json/json.go",
	      "log/log.go",
	      "main.go",
	      "mq/kafka.go",
	      "mq/mq.go",
	      "mq/nats.go",
	      "mq/rabbit.go",
	      "types/activity_badge.pb.go",
	      "types/activity_badge.proto",
	      "types/activity_summary.pb.go",
	      "types/activity_summary.proto",
	      "types/activity_summary_commit.pb.go",
	      "types/activity_summary_commit.proto",
	      "types/activity_summary_file.pb.go",
	      "types/activity_summary_file.proto",
	      "types/activity_summary_language.pb.go",
	      "types/activity_summary_language.proto",
	      "types/message.pb.go",
	      "types/message.proto",
	      "types/readme.pb.go",
	      "types/readme.proto",
	      "types/repo_import.pb.go",
	      "types/repo_import.proto",
	      "types/repo_status.pb.go",
	      "types/repo_status.proto",
	      "types/types.go",
	      "types/user.pb.go",
	      "types/user.proto",
	      "types/user_repo.pb.go",
	      "types/user_repo.proto",
	      "util/util.go"
	    ],
	    "modified": [
	      "Makefile",
	      "glide.yaml"
	    ]
	  },
	  "repository": {
	    "id": 70075614,
	    "name": "worker",
	    "full_name": "pinpt/worker",
	    "owner": {
	      "name": "pinpt",
	      "email": "hello@pinpt.co"
	    },
	    "private": true,
	    "html_url": "https://github.com/pinpt/worker",
	    "description": "new worker stuff",
	    "fork": false,
	    "url": "https://github.com/pinpt/worker",
	    "forks_url": "https://api.github.com/repos/pinpt/worker/forks",
	    "keys_url": "https://api.github.com/repos/pinpt/worker/keys{/key_id}",
	    "collaborators_url": "https://api.github.com/repos/pinpt/worker/collaborators{/collaborator}",
	    "teams_url": "https://api.github.com/repos/pinpt/worker/teams",
	    "hooks_url": "https://api.github.com/repos/pinpt/worker/hooks",
	    "issue_events_url": "https://api.github.com/repos/pinpt/worker/issues/events{/number}",
	    "events_url": "https://api.github.com/repos/pinpt/worker/events",
	    "assignees_url": "https://api.github.com/repos/pinpt/worker/assignees{/user}",
	    "branches_url": "https://api.github.com/repos/pinpt/worker/branches{/branch}",
	    "tags_url": "https://api.github.com/repos/pinpt/worker/tags",
	    "blobs_url": "https://api.github.com/repos/pinpt/worker/git/blobs{/sha}",
	    "git_tags_url": "https://api.github.com/repos/pinpt/worker/git/tags{/sha}",
	    "git_refs_url": "https://api.github.com/repos/pinpt/worker/git/refs{/sha}",
	    "trees_url": "https://api.github.com/repos/pinpt/worker/git/trees{/sha}",
	    "statuses_url": "https://api.github.com/repos/pinpt/worker/statuses/{sha}",
	    "languages_url": "https://api.github.com/repos/pinpt/worker/languages",
	    "stargazers_url": "https://api.github.com/repos/pinpt/worker/stargazers",
	    "contributors_url": "https://api.github.com/repos/pinpt/worker/contributors",
	    "subscribers_url": "https://api.github.com/repos/pinpt/worker/subscribers",
	    "subscription_url": "https://api.github.com/repos/pinpt/worker/subscription",
	    "commits_url": "https://api.github.com/repos/pinpt/worker/commits{/sha}",
	    "git_commits_url": "https://api.github.com/repos/pinpt/worker/git/commits{/sha}",
	    "comments_url": "https://api.github.com/repos/pinpt/worker/comments{/number}",
	    "issue_comment_url": "https://api.github.com/repos/pinpt/worker/issues/comments{/number}",
	    "contents_url": "https://api.github.com/repos/pinpt/worker/contents/{+path}",
	    "compare_url": "https://api.github.com/repos/pinpt/worker/compare/{base}...{head}",
	    "merges_url": "https://api.github.com/repos/pinpt/worker/merges",
	    "archive_url": "https://api.github.com/repos/pinpt/worker/{archive_format}{/ref}",
	    "downloads_url": "https://api.github.com/repos/pinpt/worker/downloads",
	    "issues_url": "https://api.github.com/repos/pinpt/worker/issues{/number}",
	    "pulls_url": "https://api.github.com/repos/pinpt/worker/pulls{/number}",
	    "milestones_url": "https://api.github.com/repos/pinpt/worker/milestones{/number}",
	    "notifications_url": "https://api.github.com/repos/pinpt/worker/notifications{?since,all,participating}",
	    "labels_url": "https://api.github.com/repos/pinpt/worker/labels{/name}",
	    "releases_url": "https://api.github.com/repos/pinpt/worker/releases{/id}",
	    "deployments_url": "https://api.github.com/repos/pinpt/worker/deployments",
	    "created_at": "2016-12-12T22:03:06Z",
	    "updated_at": "2016-12-12T22:03:06Z",
	    "pushed_at": "2016-12-12T22:03:06Z",
	    "git_url": "git://github.com/pinpt/worker.git",
	    "ssh_url": "git@github.com:pinpt/worker.git",
	    "clone_url": "https://github.com/pinpt/worker.git",
	    "svn_url": "https://github.com/pinpt/worker",
	    "homepage": null,
	    "size": 4104,
	    "stargazers_count": 0,
	    "watchers_count": 0,
	    "language": "Go",
	    "has_issues": true,
	    "has_downloads": true,
	    "has_wiki": true,
	    "has_pages": false,
	    "forks_count": 0,
	    "mirror_url": null,
	    "open_issues_count": 9,
	    "forks": 0,
	    "open_issues": 9,
	    "watchers": 0,
	    "default_branch": "master",
	    "stargazers": 0,
	    "master_branch": "master"
	  },
	  "pusher": {
	    "name": "jhaynie",
	    "email": "jhaynie@gmail.com"
	  },
	  "organization": {
	    "login": "pinpt",
	    "id": 24400526,
	    "url": "https://api.github.com/orgs/pinpt",
	    "repos_url": "https://api.github.com/orgs/pinpt/repos",
	    "events_url": "https://api.github.com/orgs/pinpt/events",
	    "hooks_url": "https://api.github.com/orgs/pinpt/hooks",
	    "issues_url": "https://api.github.com/orgs/pinpt/issues",
	    "members_url": "https://api.github.com/orgs/pinpt/members{/member}",
	    "public_members_url": "https://api.github.com/orgs/pinpt/public_members{/member}",
	    "avatar_url": "https://avatars.githubusercontent.com/u/24400526?v=3",
	    "description": ""
	  },
	  "sender": {
	    "login": "jhaynie",
	    "id": 6027,
	    "avatar_url": "https://avatars.githubusercontent.com/u/6027?v=3",
	    "gravatar_id": "",
	    "url": "https://api.github.com/users/jhaynie",
	    "html_url": "https://github.com/jhaynie",
	    "followers_url": "https://api.github.com/users/jhaynie/followers",
	    "following_url": "https://api.github.com/users/jhaynie/following{/other_user}",
	    "gists_url": "https://api.github.com/users/jhaynie/gists{/gist_id}",
	    "starred_url": "https://api.github.com/users/jhaynie/starred{/owner}{/repo}",
	    "subscriptions_url": "https://api.github.com/users/jhaynie/subscriptions",
	    "organizations_url": "https://api.github.com/users/jhaynie/orgs",
	    "repos_url": "https://api.github.com/users/jhaynie/repos",
	    "events_url": "https://api.github.com/users/jhaynie/events{/privacy}",
	    "received_events_url": "https://api.github.com/users/jhaynie/received_events",
	    "type": "User",
	    "site_admin": false
	  },
	  "installation": {
	    "id": 4388
	  }
	}`
	var pushEvent PushEvent
	err := json.Unmarshal([]byte(event), &pushEvent)
	if err != nil {
		t.Error(err)
	} else {

	}

}
